// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/Paging should contain perPage select 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c4 {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c4:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
}

.c11 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c10:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c10:focus {
  outline: 1px dashed #002d56;
}

.c10:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c12 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c9 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: flex;
  flex-direction: row;
  gap: 4px;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c7 {
  display: flex;
  flex-direction: row;
  gap: 16px;
  align-items: center;
  justify-content: start;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding-top: 8px;
  border-top: 1px solid #dae0e3;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 12px;
  line-height: 24px;
  color: #98c3d9;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 24px;
  font-weight: bold;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Položky 1 až 3 z 10
    </div>
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        disabled=""
        title="Na začátek"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left fa-sm "
          color="#98c3d9"
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="c3 c4"
        disabled=""
        title="Předchozí"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-left fa-sm "
          color="#98c3d9"
          data-icon="angle-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div
        class="c5"
      >
        1
      </div>
      <button
        class="c3 c4"
        title="Další"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right fa-sm "
          color="#002d56"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="c3 c4"
        title="Na konec"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-right fa-sm "
          color="#002d56"
          data-icon="angles-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <fieldset
      class="c6"
    >
      <div
        class="c7"
      >
        <label
          class="c8"
          for="select-16"
        >
          Stránkování
        </label>
        <div
          class="c9"
        >
          <button
            class="c3 c10"
            id="select-16"
            type="button"
          >
            <span
              class="c11 c12"
            >
              3
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`components/common/Paging should render properly 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c4 {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
}

.c4:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
}

.c11 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  width: 100%;
  height: 40px;
  gap: 8px;
  padding-left: 12px;
  padding-right: 12px;
}

.c10:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c10:focus {
  outline: 1px dashed #002d56;
}

.c10:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

.c12 {
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

.c9 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: flex;
  flex-direction: row;
  gap: 4px;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 4px;
  border: none;
}

.c7 {
  display: flex;
  flex-direction: row;
  gap: 16px;
  align-items: center;
  justify-content: start;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
  padding-top: 8px;
  border-top: 1px solid #dae0e3;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-size: 12px;
  line-height: 24px;
  color: #98c3d9;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 24px;
  font-weight: bold;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Položky 1 až 3 z 10
    </div>
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        disabled=""
        title="Na začátek"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left fa-sm "
          color="#98c3d9"
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="c3 c4"
        disabled=""
        title="Předchozí"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-left fa-sm "
          color="#98c3d9"
          data-icon="angle-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div
        class="c5"
      >
        1
      </div>
      <button
        class="c3 c4"
        title="Další"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right fa-sm "
          color="#002d56"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="c3 c4"
        title="Na konec"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-right fa-sm "
          color="#002d56"
          data-icon="angles-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <fieldset
      class="c6"
    >
      <div
        class="c7"
      >
        <label
          class="c8"
          for="select-1"
        >
          Stránkování
        </label>
        <div
          class="c9"
        >
          <button
            class="c3 c10"
            id="select-1"
            type="button"
          >
            <span
              class="c11 c12"
            >
              3
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-lg "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
